--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,14 +1,18 @@
+#root{
+  height: 100%;
+}
+.layout{
+  height: 100%;
+}
 .logo {
   width: 150px;
   height: 50px;
   margin: -5px 24px 5px 0;
   float: left;
 }
-
 .link-inline{
   display: inline-block !important;
 }
-
 .logo-text strong{
   padding-left: 15px;
   font-size: 18px;
@@ -17,6 +21,17 @@
 .theme-switch{
   float: right;
 }
+
+.container{
+  min-height: 100%;
+  padding: 70px 50px 100px 50px;
+}
+.footer{
+  width: 100%;
+  text-align: center;
+  padding: 0;
+}
+
 
 /* .App {
   text-align: center;
