--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,3 +1,6 @@
+/* #root{
+  height: 120%;
+} */
 #root{
   height: 100%;
 }
@@ -31,68 +34,3 @@
   text-align: center;
   padding: 0;
 }
-
-
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
-
-/* .code-box-demo {
-  text-align: center;
-}
-.ant-layout-header,
-.ant-layout-footer {
-  background: #7dbcea;
-  color: #fff;
-}
-.ant-layout-footer {
-  line-height: 1.5;
-}
-.ant-layout-sider {
-  background: #3ba0e9;
-  color: #fff;
-  line-height: 120px;
-}
-.ant-layout-content {
-  background: rgba(16, 142, 233, 1);
-  color: #fff;
-  min-height: 120px;
-  line-height: 120px;
-}
-> .code-box-demo > div > .ant-layout {
-  margin-bottom: 48px;
-}
-> .code-box-demo > div > .ant-layout:last-child {
-  margin: 0;
-} */
