--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -7,7 +7,17 @@
 .layout{
   height: 100%;
 }
+
+/* .switch {
+  display: inline;
+  width: 150px;
+  height: 50px;
+  margin: -5px 10px 5px 0;
+  float: left;
+} */
+
 .logo {
+  /* width: 150px; */
   width: 150px;
   height: 50px;
   margin: -5px 24px 5px 0;
